# SKILLCHECK

./: .gitignore  AGENTS.md  LICENSE  PLANS.md  QUESTIONS.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml
.codex/: SCRATCHPAD.md
.devcontainer/: devcontainer.json
.github/workflows/: docs-pages.yml  skillcheck.yml
.skillcheck/: Brand Voice Editor (Safe Demo).lint.json  Brand Voice Editor (Safe Demo).sbom.json  Risky Net Egress Demo.lint.json  Risky Net Egress Demo.probe.json  brand-voice-editor-safe-demo.attestation.json  brand-voice-editor-safe-demo.probe.json  brand-voice-editor-safe-demo.sbom.json  results.csv  results.json  results.md  risky-net-egress-demo.probe.json
.specstory/history/: 2025-10-17_18-13Z-commit-and-push-from-github-account.md
docs/: demo-playbook.md  engineer-walkthrough.md  finding-remediation.md  help.md  index.md  policy-cookbook.md  reviewer-walkthrough.md  sample-results.md  share-pack.md  technical-overview.md  why-skillcheck.md
docs/artifacts/: results.csv  results.json  results.md
docs/plans/: 2026-02-15-autonomous-remediation-pr-bot.md  2026-02-15-release-ready-v1-design.md  2026-02-15-release-ready-v1.md
examples/brand-voice-editor/: SKILL.md
scripts/: demo.sh  try.sh
skillcheck/: __init__.py  _sandbox_runner.py  attest.py  bundle.py  cli.py  dependencies.py  fixer.py  lint_rules.py  otel.py  probe.py  remediation.py  report.py  sbom.py  schema.py  studio.py  utils.py
tests/: conftest.py  test_attest.py  test_cli.py  test_fixer.py  test_lint_rules.py  test_probe.py  test_report_writer.py  test_schema.py
(+13 files in other folders)
